--- a/Batch 03 Online/Website (Spotify Clone)/index.html
+++ b/Batch 03 Online/Website (Spotify Clone)/index.html
@@ -4,21 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spotify Made by kashan adnan Batch 03</title>
-    <link rel="stylesheet" href="./style.css">
+    <title>Spotify Clone</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
-
-    <i class="fa-solid fa-ellipsis"></i>
-    <i class="fa-solid fa-angle-left"></i>
-    <i class="fa-solid fa-angle-right"></i>
-    <i class="fa-solid fa-house"></i>
-    <div>
-        <i class="fa-solid fa-magnifying-glass"></i>
+    <div class="navbar">
+        <i class="fa-brands fa-spotify"></i>
+        <i class="fa-solid fa-house"></i>
+        <div class="search-bar">
+            <i class="fa-solid fa-magnifying-glass"></i>
+            <input type="text" placeholder="What do you want to play?">
+            <i class="fa-solid fa-window-maximize"></i>
+        </div>
     </div>
 </body>
 
