spotify full clone complete

--- a/Batch 03 Online/Website (Spotify Clone)/index.html
+++ b/Batch 03 Online/Website (Spotify Clone)/index.html
@@ -12,13 +12,130 @@
 </head>
 
 <body>
+
     <div class="navbar">
-        <i class="fa-brands fa-spotify"></i>
-        <i class="fa-solid fa-house"></i>
-        <div class="search-bar">
-            <i class="fa-solid fa-magnifying-glass"></i>
-            <input type="text" placeholder="What do you want to play?">
-            <i class="fa-solid fa-window-maximize"></i>
+
+        <div class="left">
+            <i class="fa-brands fa-spotify"></i>
+            <i class="fa-solid fa-house"></i>
+            <div class="search-bar">
+                <i class="fa-solid fa-magnifying-glass"></i>
+                <input type="text" placeholder="What do you want to play?">
+                <i class="fa-solid fa-window-maximize"></i>
+            </div>
+        </div>
+
+        <div class="right">
+            <div class="text-container">
+                <p>Premium</p>
+                <p>Support</p>
+                <p>Download</p>
+            </div>
+            <div class="line"></div>
+            <button class="install">
+                <i class="fa-solid fa-download"></i>
+                Install App
+            </button>
+            <button class="signUp">Sign up</button>
+            <button class="login">Login</button>
+        </div>
+
+    </div>
+    <div class="container">
+        <div class="sidebar">
+            <div class="library-section">
+                <h1>Library</h1>
+                <i class="fa-solid fa-plus"></i>
+            </div>
+            <div class="playlist-section">
+                <h1>Create your first playlist</h1>
+                <p>It is easy, we'll help you</p>
+                <button>Create Playlist</button>
+            </div>
+            <div class="playlist-section">
+                <h1>Let's find some podcast to follow</h1>
+                <p>We'll keep you updated on new episodes</p>
+                <button>Browse Podcasts</button>
+            </div>
+            <div class="footer-section">
+                <div class="links">
+                    <span>Legal</span>
+                    <span>Saftey&Privacy Center</span>
+                    <span>Privacy Policy</span>
+                    <span>Cookies</span>
+                    <span>About Ads</span>
+                    <span>Accessiblity</span>
+                    <span>Cookies</span>
+                </div>
+                <button><i class="fa-solid fa-globe"></i> English</button>
+            </div>
+        </div>
+        <div class="main-section">
+            <div class="trending-songs">
+                <h1>Trending songs</h1>
+                <div class="songs-container">
+                    <div class="song">
+                        <img src="./image.png" alt="">
+                        <p>Saphire</p>
+                        <p>Ed shereen</p>
+                    </div>
+                    <div class="song">
+                        <img src="./image.png" alt="">
+                        <p>Saphire</p>
+                        <p>Ed shereen</p>
+                    </div>
+                    <div class="song">
+                        <img src="./image.png" alt="">
+                        <p>Saphire</p>
+                        <p>Ed shereen</p>
+                    </div>
+                    <div class="song">
+                        <img src="./image.png" alt="">
+                        <p>Saphire</p>
+                        <p>Ed shereen</p>
+                    </div>
+                    <div class="song">
+                        <img src="./image.png" alt="">
+                        <p>Saphire</p>
+                        <p>Ed shereen</p>
+                    </div>
+                    <div class="song">
+                        <img src="./image.png" alt="">
+                        <p>Saphire</p>
+                        <p>Ed shereen</p>
+                    </div>
+                </div>
+            </div>
+            <div class="popular-artist">
+                <h1>Popular Artist</h1>
+                <div class="artists-container">
+                    <div class="artist">
+                        <img src="./ab67616100005174cb6926f44f620555ba444fca.jpeg" alt="">
+                        <p>Pritam</p>
+                        <p>Artist</p>
+                    </div>
+                    <div class="artist">
+                        <img src="./ab67616100005174cb6926f44f620555ba444fca.jpeg" alt="">
+                        <p>Pritam</p>
+                        <p>Artist</p>
+                    </div>
+                    <div class="artist">
+                        <img src="./ab67616100005174cb6926f44f620555ba444fca.jpeg" alt="">
+                        <p>Pritam</p>
+                        <p>Artist</p>
+                    </div>
+                    <div class="artist">
+                        <img src="./ab67616100005174cb6926f44f620555ba444fca.jpeg" alt="">
+                        <p>Pritam</p>
+                        <p>Artist</p>
+                    </div>
+                    <div class="artist">
+                        <img src="./ab67616100005174cb6926f44f620555ba444fca.jpeg" alt="">
+                        <p>Pritam</p>
+                        <p>Artist</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
